# SimpleCxxLib

./: .gitignore  CMakeLists.txt  README.md
collections/include/: compare.h  dawglexicon.h  graph.h  grid.h  hashmap.h  hashset.h  lexicon.h  map.h  point.h  pqueue.h  queue.h  set.h  stack.h  vector.h
collections/src/: dawglexicon.cpp  hashcode.cpp  hashmap.cpp  lexicon.cpp  point.cpp
console/include/: main.h
console/src/: main.cpp
docs/: CNAME  ErrorException-class.html  G3DRect-class.html  GActionEvent-class.html  GArc-class.html  GButton-class.html  GCheckBox-class.html  GChooser-class.html  GCompound-class.html  GDimension-class.html  GEvent-class.html  GImage-class.html  GInteractor-class.html  GKeyEvent-class.html  GLabel-class.html  GLine-class.html  GMouseEvent-class.html  GObject-class.html  GOval-class.html  GPoint-class.html  GPolygon-class.html  GRect-class.html  GRectangle-class.html  GRoundRect-class.html  GSlider-class.html  GTextField-class.html  GTimer-class.html  GTimerEvent-class.html  GWindow-class.html  GWindowEvent-class.html  Graph-class.html  Grid-class.html  HashMap-class.html  HashSet-class.html  Lexicon-class.html  Lock-class.html  Map-class.html  Point-class.html  PriorityQueue-class.html  Queue-class.html  (+68 more)
docs/pictures/ClassHierarchies/: GEventHierarchy-h.ps  GEventHierarchy.ps  GInteractorHierarchy-h.ps  GInteractorHierarchy.ps  GObjectHierarchy-h.ps  GObjectHierarchy.ps  Makefile  hierarchy.ps
docs/pictures/GInteractorDiagrams/: GCheckBox.html  GChooser.html  GSlider.html
docs/pictures/GObjectDiagrams/: Makefile  (+6 more)
examples/: CMakeLists.txt
examples/DrawDiagonals/: CMakeLists.txt
examples/DrawDiagonals/src/: DrawDiagonals.cpp
examples/DrawLines/: CMakeLists.txt
examples/DrawLines/src/: DrawLines.cpp
examples/DrawRectangles/: CMakeLists.txt
examples/DrawRectangles/src/: DrawRectangles.cpp
examples/Flower/: CMakeLists.txt
examples/Flower/src/: Flower.cpp
examples/GHelloWorld/: CMakeLists.txt
examples/GHelloWorld/src/: GHelloWorld.cpp
examples/GraphicExample/: CMakeLists.txt
examples/GraphicExample/src/: GraphicsExample.cpp
examples/PacMan/: CMakeLists.txt
examples/PacMan/src/: PacMan.cpp
examples/Snowflake/: CMakeLists.txt
examples/Snowflake/include/: gsnowflake.h
examples/Snowflake/src/: Snowflake.cpp  gsnowflake.cpp
examples/Stoplight/: CMakeLists.txt
examples/Stoplight/include/: gstoplight.h
examples/Stoplight/src/: Stoplight.cpp  gstoplight.cpp
examples/USFlag/: CMakeLists.txt
examples/USFlag/include/: gstar.h
examples/USFlag/src/: USFlag.cpp  gstar.cpp
examples/UnitTesting/: CMakeLists.txt  README.md
examples/UnitTesting/src/: UnitTesting.cpp
examples/UnitTesting/src/modules/: TestDirectionType.cpp  TestFilelibLibrary.cpp  TestGraphClass.cpp  TestGridClass.cpp  TestHashSetClass.cpp  TestHashmapClass.cpp  TestLexiconClass.cpp  TestMapClass.cpp  TestPriorityQueueClass.cpp  TestQueueClass.cpp  TestRandomLibrary.cpp  TestSetClass.cpp  TestSimpioLibrary.cpp  TestStackClass.cpp  TestStrlibLibrary.cpp  TestTokenScannerClass.cpp  TestVectorClass.cpp
graphics/include/: console.h  gevents.h  ginteractors.h  gobjects.h  gtimer.h  gtypes.h  gwindow.h  platform.h  sound.h
graphics/src/: console.cpp  gevents.cpp  ginteractors.cpp  gobjects.cpp  gtimer.cpp  gtypes.cpp  gwindow.cpp  platform.cpp  sound.cpp
include/: Memory.h  console.h  dawglexicon.h  error.h  filelib.h  gevents.h  ginteractors.h  gobjects.h  graph.h  grid.h  gtimer.h  gtypes.h  gwindow.h  hashcode.h  hashmap.h  hashset.h  lexicon.h  map.h  platform.h  point.h  pqueue.h  queue.h  set.h  simpio.h  sound.h  stack.h  strlib.h  thread.h  timer.h  tokenscanner.h  unittest.h  vector.h
include/private/: main.h  randompatch.h  tokenpatch.h
io/include/: filelib.h  simpio.h  tokenscanner.h
io/src/: filelib.cpp  simpio.cpp  tokenscanner.cpp
java/: CMakeLists.txt  JBEManifest.txt  Makefile
java/graphics/: GArc.java  GImage.java  GObject.java  GOval.java  GPoint.java  GPolygon.java  GRect.java  GRectangle.java  GRoundRect.java
java/spl/: GButton.java  GCheckBox.java  GChooser.java  GTextField.java  JBECanvas.java  JBECommand.java  JBEFileFilter.java  JBELabel.java  JavaBackEnd.java
java/src/edu/stanford/cs/java/graphics/: G3DRect.java  GArc.java  GCanvas.java  GCompound.java  GContainer.java  GDimension.java  GFillable.java  GImage.java  GImageTools.java  GLabel.java  GLine.java  GMath.java  GObject.java  GOval.java  GPoint.java  GPolygon.java  GRect.java  GRectangle.java  GResizable.java  GRoundRect.java  GScalable.java  GWindow.java
java/src/edu/stanford/cs/java/spl/: GButton.java  GCheckBox.java  GChooser.java  GInteractor.java  GSlider.java  GTextField.java  JBECanvas.java  JBECommand.java  JBEConsole.java  JBEFileFilter.java  JBELabel.java  JBETopCompound.java  JBEWindow.java  JavaBackEnd.java
java/src/edu/stanford/cs/java/tokenscanner/: TokenScanner.java
java/src/graphics/: G3DRect.java  GCanvas.java  GCompound.java  GContainer.java  GDimension.java  GFillable.java  GImageTools.java  GLabel.java  GLine.java  GMath.java  GResizable.java  GScalable.java  GWindow.java
java/src/spl/: GInteractor.java  GSlider.java  JBEConsole.java  JBETopCompound.java  JBEWindow.java
java/tokenscanner/: TokenScanner.java
private/include/: randompatch.h  tokenpatch.h  tplatform.h
private/src/: tplatform.cpp
src/: Memory.cpp  console.cpp  dawglexicon.cpp  direction.cpp  error.cpp  filelib.cpp  gevents.cpp  ginteractors.cpp  gmath.cpp  gobjects.cpp  gtimer.cpp  gtypes.cpp  gwindow.cpp  hashcode.cpp  hashmap.cpp  lexicon.cpp  main.cpp  memoryutils.cpp  platform.cpp  point.cpp  random.cpp  simpio.cpp  sound.cpp  startup.cpp  strlib.cpp  thread.cpp  tokenscanner.cpp  tplatform.cpp  unittest.cpp
system/include/: error.h  thread.h
system/src/: error.cpp  thread.cpp
testing/include/: unittest.h
testing/src/: memoryutils.cpp  unittest.cpp
tests/: CMakeLists.txt  TestSetClass.cpp  TestVectorClass.cpp
util/include/: direction.h  gmath.h  random.h  strlib.h
util/src/: direction.cpp  gmath.cpp  random.cpp  strlib.cpp  timer.cpp
(+2 files in other folders)
